# comfy-viewer

./: .gitignore  CONDUIT.md  NOTES.md  README.md  RELEASE_CHECKLIST.md  app.py  comfy-viewer  comfy_client.py  config.example.yaml  file_service.py  file_watcher.py  pyproject.toml  registrations.py  requirements.txt  settings.yaml.example  start.sh  thumbnails.py  websocket_server.py
hooks/: __init__.py  _default.py
hooks/conduit/: __init__.py
hooks/conduit/plugins/: __init__.py  normal.py  scene_gen.py
src/comfy_viewer/: __init__.py  __main__.py  app.py  cli.py  comfy_client.py  config.py  emit.py  file_service.py  registrations.py  state.py  thumbnails.py  websocket_server.py
static/css/: execution-block.css
static/js/: api.js  execution-block.js  settings-modal.js  state.js
subscribers/: __init__.py  redis_subscriber.py
templates/: library.html  viewer.html
