[project]
name = "comfy-viewer"
description = "Web interface for viewing and managing ComfyUI workflows and outputs"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "flask>=2.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.0.0",
    "requests>=2.25.0",
    "pyyaml>=6.0",
    "platformdirs>=4.0.0",
    "websocket-client>=1.0.0",
    "watchdog>=3.0.0",
    "pillow>=10.0.0",
]

[project.scripts]
comfy-viewer = "comfy_viewer.cli:main"

[project.urls]
Repository = "https://github.com/Ckrest/comfy-viewer"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "comfy_viewer.version.__version__"}
